fix spacing in table; update css

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 #logo {
     width: 60px;
 }
+
+
+.eg-w-12 {
+    width: 12%;
+}
+
